skewness/ outlier 설명

--- a/Data_science/playground_2023/playground_season3_ep1_skewness_handling.ipynb
+++ b/Data_science/playground_2023/playground_season3_ep1_skewness_handling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTe9q9OUFf3mO583WMqWtg",
+      "authorship_tag": "ABX9TyN10NIsc80LkeiRBXiHQiiD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,7 +170,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 143
+          "height": 187
         },
         "id": "SRcER7OJRQby",
         "outputId": "b40147bd-7e87-493a-aa0e-8fef909b3059"
@@ -896,7 +896,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 539
         },
         "id": "TWfteBcuZ0yE",
         "outputId": "cd92b045-3dcd-46ab-e620-014ab6b9f04e"
@@ -1201,6 +1201,61 @@
       "metadata": {
         "id": "Y2h9f4JUgOIM"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Outlier 다루기"
+      ],
+      "metadata": {
+        "id": "huHitmNRhR--"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**[Outlier 원인]**\n",
+        "- 관측치 또는 input error\n",
+        "- Data corruption\n",
+        "- outlier observation"
+      ],
+      "metadata": {
+        "id": "zheUoUm5h49X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "각 데이터에 특정되어지기 때문에, **outlier를 정의할 수 있는 정확한 방법은 없다.**\n",
+        "\n",
+        "- raw 관측치에서 해석할 수 있어야 함\n",
+        "- outlier인지 아닌지 결정할 수 있어야 함"
+      ],
+      "metadata": {
+        "id": "6Mc7wzmLiInb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**[Statistical Method]**\n",
+        "- statistical(통계적인) 방법을 사용할 수 있음\n",
+        "- 이것이 outlier로 특정지을 수 있다는 것이 아니며, 또 무조건적으로 제거되어야 할 대상임을 의미하지 않는다.\n",
+        "- non-outlier 값들을 기반으로 문맥을 확인하여 outlier를 판별할 수 있는 systematic relationship이 있는지, 패턴이 있는지 확인할 수 있다\n",
+        "- outlier, non-outlier가 설명이 가능하면 systematic하게 outlier라 규정될 수 있다"
+      ],
+      "metadata": {
+        "id": "itvw4_3Win19"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hIUSIzY1hT76"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
